# squid-ecap-gzip

./: .gitattributes  .gitignore  CHANGELOG  ChangeLog.md  Installation.md  LICENSE-eCAP  Makefile.in  NOTICE  ProjectHome.md  README  README.md  acinclude.m4  aclocal.m4  bootstrap.sh  configure.in  gzip_ecap_extended_compressible_types_v1_2.patch  gzip_ecap_extended_compressible_types_v1_3.patch  gzip_ecap_extended_compressible_types_v1_6.patch  gzip_ecap_vb_stop_on_done_v1.patch
cfgaux/: xstd_common.ac
squid-ecap-gzip/: CHANGELOG  CREDITS  configure.in
squid-ecap-gzip/src/: Makefile.am  adapter_gzip.cc
src/: Makefile.in  adapter_gzip.cc
trunk/squid-ecap-gzip/: CHANGELOG  Makefile.am  README  configure
trunk/squid-ecap-gzip/cfgaux/: libtooltags.m4  xstd_cpp_checks.ac
trunk/squid-ecap-gzip/src/: adapter_gzip.cc  autoconf.h.in  sample.h
wiki/: ChangeLog.wiki  Installation.wiki
